--- a/semi-b-java/1-stack-queue/Makefile
+++ b/semi-b-java/1-stack-queue/Makefile
@@ -1,7 +1,16 @@
 TARGET = StackQueue
+TEST_TARGET = StackQueueTest
+TEST_JFLAGS = -classpath .:/usr/share/java/junit4-4.11.jar
+JAVAS = $(wildcard *.java)
 
-run: build
+test: $(TEST_TARGET).class $(JAVAS)
+	java $(TEST_JFLAGS) org.junit.runner.JUnitCore $(TEST_TARGET)
+
+run: $(TARGET).class $(JAVAS)
 	java $(TARGET)
 
-build:
+$(TARGET).class:
 	javac $(TARGET).java
+
+$(TEST_TARGET).class:
+	javac $(TEST_JFLAGS) $(TEST_TARGET).java
